# cryptominisat-satrace2010-quali

./: CMakeLists.txt  Makefile.in  config.h.in  configure
MTRand/: MersenneTwister.h
Solver/: CMakeLists.txt  Clause.h  Makefile.in  PackedRow.h  Subsumer.cpp
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
